# s3plz-rs

./: .gitignore  Cargo.toml  README.md  deployment.yaml  flake.nix
specs/: README.md  output.tgz
src/: error.rs  main.rs  shared_state.rs  util.rs
src/routes/: mod.rs  path.rs  root.rs
