[package]
name = "s3plz"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
hyper = "1.6.0"
serde-xml-rs = "0.8.1"
tracing = "0.1.41"

chrono = {version = "0.4.41", features = ["serde"]}
clap = {version ="4.5.40", features = ["derive", "env"]}
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.46.0", features = ["full"] }
md5 = "0.8.0"
base64 = "0.22.1"

